[gd_scene load_steps=47 format=2]

[ext_resource path="res://resources/Cthulhu.tres" type="Resource" id=1]
[ext_resource path="res://resources/Player1Controls.tres" type="Resource" id=2]
[ext_resource path="res://resources/Player1Dialogue.tres" type="Resource" id=3]
[ext_resource path="res://resources/Player2Controls.tres" type="Resource" id=4]
[ext_resource path="res://resources/Player2Dialogue.tres" type="Resource" id=5]
[ext_resource path="res://scenes/Grim.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Tombstone.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Urn.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/SkullCage.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/ItemTombstone.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/Skull.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/Cthulhu.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/ItemEyes.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/Cerberus.tscn" type="PackedScene" id=15]
[ext_resource path="res://art/Character/Devil1_run_right1.PNG" type="Texture" id=16]
[ext_resource path="res://art/Character/Devil1_idle_right.PNG" type="Texture" id=17]
[ext_resource path="res://art/Character/Devil1_run_right3.PNG" type="Texture" id=18]
[ext_resource path="res://art/Character/Devil1_run_right2.PNG" type="Texture" id=19]
[ext_resource path="res://art/Character/Devil1_run_right4.PNG" type="Texture" id=20]
[ext_resource path="res://scripts/PlayerCenter.gd" type="Script" id=21]
[ext_resource path="res://scripts/Level.gd" type="Script" id=22]
[ext_resource path="res://art/Character/Devil2_run_right1.PNG" type="Texture" id=23]
[ext_resource path="res://art/Background/Collision_objects.png" type="Texture" id=24]
[ext_resource path="res://art/Character/Devil2_run_right2.PNG" type="Texture" id=25]
[ext_resource path="res://art/Interactables/Tomb4.png" type="Texture" id=26]
[ext_resource path="res://art/Interactables/Tomb2.png" type="Texture" id=27]
[ext_resource path="res://art/Character/Devil2_idle_right.PNG" type="Texture" id=28]
[ext_resource path="res://art/Interactables/Tomb1.png" type="Texture" id=29]
[ext_resource path="res://art/Losing Composer.wav" type="AudioStream" id=30]
[ext_resource path="res://art/Interactables/Ghost.png" type="Texture" id=31]
[ext_resource path="res://art/Character/Devil2_run_right3.PNG" type="Texture" id=32]
[ext_resource path="res://art/Character/Devil2_run_right4.PNG" type="Texture" id=33]
[ext_resource path="res://scenes/Cooler.tscn" type="PackedScene" id=34]

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 352, 224, 0, 224, 0, 96, 352, 96 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 369, 315, 0, 315, 17, 91, 369, 91 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 394, 235, 10, 235, 10, 107, 394, 107 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 369, 213, 0, 213, 0, 21, 369, 21 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 373, 186, 5, 186, 5, 0, 373, 0 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 207, 93, 335, 93, 335, 189, 303, 189, 207, 189, 79, 189, 15, 157, 15, 93, 79, 93, 143, 93 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 366, 443, 14, 443, 14, 123, 366, 123 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 634, 220, 0, 220, 0, 92, 634, 92 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 320, 224, 0, 224, 0, 96, 320, 96 )

[sub_resource type="TileSet" id=13]
2/name = "Collision_objects.png 2"
2/texture = ExtResource( 24 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 47, 5, 381, 438 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 6 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Collision_objects.png 3"
3/texture = ExtResource( 24 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 1398, 53, 433, 335 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 7 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "Collision_objects.png 4"
4/texture = ExtResource( 24 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 494, 427, 369, 304 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 8 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "Collision_objects.png 5"
5/texture = ExtResource( 24 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 923, 454, 373, 286 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 9 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "Collision_objects.png 6"
6/texture = ExtResource( 24 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 1425, 451, 347, 307 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 10 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "Collision_objects.png 7"
7/texture = ExtResource( 24 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 50, 485, 368, 533 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 11 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "Collision_objects.png 8"
8/texture = ExtResource( 24 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 518, 772, 637, 283 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 12 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "Collision_objects.png 9"
9/texture = ExtResource( 24 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 512, 64, 320, 320 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 15 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "Collision_objects.png 10"
10/texture = ExtResource( 24 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 928, 64, 352, 320 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape = SubResource( 14 )
10/shape_one_way = false
10/shape_one_way_margin = 1.0
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 18 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 32 ), ExtResource( 25 ), ExtResource( 33 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[node name="Level" type="Node2D"]
script = ExtResource( 22 )

[node name="YSort" type="YSort" parent="."]

[node name="Urn" parent="YSort" instance=ExtResource( 8 )]
position = Vector2( -780, -1507 )

[node name="Skull" parent="YSort" instance=ExtResource( 12 )]
position = Vector2( 956, -802 )

[node name="TileMap" type="TileMap" parent="YSort"]
position = Vector2( 40, -55 )
tile_set = SubResource( 13 )
cell_tile_origin = 2
cell_y_sort = true
format = 1
tile_data = PoolIntArray( -5832625, 5, 0, -5832624, 5, 0, -5832623, 5, 0, -5767090, 5, 0, -5767086, 5, 0, -5701588, 5, 0, -5701554, 5, 0, -5701550, 5, 0, -5701549, 5, 0, -5636052, 5, 0, -5636015, 5, 0, -5636013, 5, 0, -5570516, 5, 0, -5570509, 7, 0, -5570491, 7, 0, -5570483, 5, 0, -5570479, 5, 0, -5570477, 5, 0, -5504981, 5, 0, -5504980, 5, 0, -5504947, 5, 0, -5504943, 5, 0, -5504941, 5, 0, -5439445, 5, 0, -5439444, 5, 0, -5439411, 5, 0, -5439407, 5, 0, -5439406, 5, 0, -5373909, 5, 0, -5373908, 5, 0, -5373875, 5, 0, -5373872, 5, 0, -5373871, 5, 0, -5373870, 5, 0, -5308373, 5, 0, -5308372, 5, 0, -5308339, 5, 0, -5308336, 5, 0, -5308335, 5, 0, -5308334, 5, 0, -5242837, 5, 0, -5242836, 5, 0, -5242803, 5, 0, -5242800, 5, 0, -5242799, 5, 0, -5242798, 5, 0, -5177301, 5, 0, -5177300, 5, 0, -5177267, 5, 0, -5177264, 5, 0, -5177263, 5, 0, -5111765, 5, 0, -5111764, 5, 0, -5111731, 5, 0, -5111729, 5, 0, -5111728, 5, 0, -5111727, 5, 0, -5046229, 5, 0, -5046228, 5, 0, -5046195, 5, 0, -5046193, 5, 0, -5046192, 5, 0, -5046191, 5, 0, -4980693, 5, 0, -4980692, 5, 0, -4980685, 7, 0, -4980667, 7, 0, -4980659, 5, 0, -4980657, 5, 0, -4980656, 5, 0, -4980655, 5, 0, -4915157, 5, 0, -4915156, 5, 0, -4915123, 5, 0, -4915121, 5, 0, -4915120, 5, 0, -4915119, 5, 0, -4849621, 5, 0, -4849620, 5, 0, -4849587, 5, 0, -4849585, 5, 0, -4849584, 5, 0, -4849583, 5, 0, -4784086, 5, 0, -4784085, 5, 0, -4784084, 5, 0, -4784051, 5, 0, -4784049, 5, 0, -4784048, 5, 0, -4784047, 5, 0, -4653079, 8, 0, -4653069, 8, 0, -4653059, 3, 0, -4718589, 8, 0, -4718579, 8, 0, -4718550, 5, 0, -4718548, 5, 0, -4718515, 5, 0, -4718513, 5, 0, -4718512, 5, 0, -4718511, 5, 0, -4587543, 9, 0, -4653038, 9, 0, -4653014, 5, 0, -4653012, 5, 0, -4652979, 5, 0, -4652977, 5, 0, -4652976, 5, 0, -4652975, 5, 0, -4587479, 5, 0, -4587478, 5, 0, -4587476, 5, 0, -4587443, 5, 0, -4587441, 5, 0, -4587440, 5, 0, -4587439, 5, 0, -4521943, 5, 0, -4521940, 5, 0, -4521907, 5, 0, -4521905, 5, 0, -4521904, 5, 0, -4521903, 5, 0, -4390935, 9, 0, -4456430, 9, 0, -4456407, 5, 0, -4456404, 5, 0, -4456371, 5, 0, -4456369, 5, 0, -4456368, 5, 0, -4456367, 5, 0, -4390871, 5, 0, -4390868, 5, 0, -4390861, 7, 0, -4390843, 7, 0, -4390835, 5, 0, -4390833, 5, 0, -4390832, 5, 0, -4390831, 5, 0, -4325336, 5, 0, -4325335, 5, 0, -4325333, 5, 0, -4325299, 5, 0, -4325297, 5, 0, -4325296, 5, 0, -4325295, 5, 0, -4194327, 9, 0, -4259822, 9, 0, -4259800, 5, 0, -4259797, 5, 0, -4259796, 5, 0, -4259763, 5, 0, -4259762, 5, 0, -4259760, 5, 0, -4194264, 5, 0, -4194261, 5, 0, -4194260, 5, 0, -4194226, 5, 0, -4194224, 5, 0, -4128728, 5, 0, -4128725, 5, 0, -4128724, 5, 0, -4128691, 5, 0, -4128690, 5, 0, -4128688, 5, 0, -3997719, 9, 0, -4063214, 9, 0, -4063192, 5, 0, -4063189, 5, 0, -4063188, 5, 0, -4063155, 5, 0, -4063152, 5, 0, -3997656, 5, 0, -3997653, 5, 0, -3997652, 5, 0, -3997619, 5, 0, -3997616, 5, 0, -3932120, 5, 0, -3932117, 5, 0, -3932116, 5, 0, -3932083, 5, 0, -3932080, 5, 0, -3801111, 9, 0, -3866606, 9, 0, -3866584, 5, 0, -3866581, 5, 0, -3866580, 5, 0, -3866547, 5, 0, -3866543, 5, 0, -3735575, 8, 0, -3735565, 8, 0, -3801085, 8, 0, -3801075, 8, 0, -3801048, 5, 0, -3801045, 5, 0, -3801044, 5, 0, -3801037, 2, 0, -3801019, 2, 0, -3801011, 5, 0, -3735509, 5, 0, -3735475, 5, 0, -3669974, 8, 0, -3669969, 8, 0, -3669947, 8, 0, -3669942, 8, 0, -3473417, 536870916, 0, -3538941, 4, 0, -3538902, 9, 0, -3538865, 9, 0, -3473329, 9, 0, -3407830, 9, 0, -3276809, 536870916, 0, -3342333, 4, 0, -3276721, 9, 0, -3211222, 9, 0, -3080201, 536870916, 0, -3145725, 4, 0, -3080113, 9, 0, -3014614, 9, 0, -2883593, 536870916, 0, -2949117, 4, 0, -2949079, 7, 0, -2883505, 9, 0, -2686985, 536870916, 0, -2752509, 4, 0, -2686941, 7, 0, -2686897, 9, 0, -2490377, 536870916, 0, -2555901, 4, 0, -2490289, 9, 0, -2424803, 7, 0, -2293769, 536870916, 0, -2359293, 4, 0, -2293705, 10, 0, -2293700, 10, 0, -2293695, 10, 0, -2293690, 9, 0, -2293685, 9, 0, -2293681, 9, 0, -2097161, 536870916, 0, -2162685, 4, 0, -2162665, 7, 0, -2162636, 6, 0, -2031567, 6, 0, -1900553, 3, 0, -1966078, 536870915, 0, -1835036, 9, 0, -1835031, 8, 0, -1835021, 8, 0, -1900541, 8, 0, -1900531, 8, 0, -1900498, 6, 0, -1703959, 3, 0, -1769429, 6, 0, -1638428, 9, 0, -1638360, 6, 0, -1441820, 9, 0, -1507291, 6, 0, -1310743, 3, 0, -1376223, 6, 0, -1245212, 9, 0, -1310697, 10, 0, -1310692, 10, 0, -1048604, 9, 0, -1114089, 9, 0, -983063, 8, 0, -983053, 8, 0, -1048553, 2, 0, -851996, 9, 0, -851991, 3, 0, -851940, 6, 0, -655388, 9, 0, -720864, 6, 0, -458780, 9, 0, -458775, 3, 0, -524253, 6, 0, -393244, 536870920, 0, -393234, 536870920, 0, -393229, 536870920, 0, -458713, 6, 0, -327709, 536870919, 0, -393196, 2, 0, -327637, 6, 0, -196631, 2, 0, -262118, 6, 0, -196566, 6, 0, -131046, 6, 0, -131026, 6, 0, -65519, 6, 0, -65481, 6, 0, 65507, 7, 0, 46, 6, 0, 52, 6, 0, 58, 6, 0, 65549, 6, 0, 65562, 6, 0, 65586, 6, 0, 65598, 6, 0, 131101, 6, 0, 196618, 536870918, 0, 196672, 6, 0, 327641, 536870920, 0, 327646, 536870920, 0, 262212, 5, 0, 327686, 536870918, 0, 393249, 6, 0, 393285, 5, 0, 524248, 536870917, 0, 458753, 536870918, 0, 458821, 5, 0, 524357, 5, 0, 655319, 536870917, 0, 589856, 6, 0, 589893, 5, 0, 720894, 536870918, 0, 655429, 5, 0, 786391, 536870917, 0, 720965, 5, 0, 851963, -536870906, 0, 786468, 6, 0, 786501, 5, 0, 852037, 5, 0, 982999, 536870917, 0, 917539, 6, 0, 917573, 5, 0, 1048535, 536870917, 0, 1048570, -536870906, 0, 983109, 5, 0, 1114071, 536870917, 0, 1048644, 5, 0, 1048645, 5, 0, 1179607, 536870917, 0, 1179640, -536870906, 0, 1114180, 5, 0, 1245144, 5, 0, 1245145, 8, 0, 1245150, 8, 0, 1179684, 6, 0, 1179716, 5, 0, 1310695, 6, 0, 1310709, -1073741818, 0, 1245219, 6, 0, 1245251, 5, 0, 1245252, 5, 0, 1376235, -536870906, 0, 1376241, -536870906, 0, 1310787, 5, 0, 1441774, -536870906, 0, 1376293, 6, 0, 1376322, 5, 0, 1376323, 5, 0, 1441832, 6, 0, 1441858, 5, 0, 1507393, 5, 0, 1507394, 5, 0, 1572906, 6, 0, 1572928, 5, 0, 1572929, 5, 0, 1638444, 6, 0, 1638463, 5, 0, 1638464, 5, 0, 1703984, 6, 0, 1703998, 5, 0, 1703999, 5, 0, 1769524, 6, 0, 1769533, 5, 0, 1769534, 5, 0, 1835067, 5, 0, 1835068, 5, 0, 1835069, 5, 0, 1900602, 5, 0, 1900603, 5, 0, 1966135, 5, 0, 1966136, 5, 0, 1966137, 5, 0, 1966138, 5, 0, 2031670, 5, 0, 2031671, 5, 0 )

[node name="ItemTombstone" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( -877, -4225 )

[node name="Tombstone" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( -445, -4219 )
texture = ExtResource( 29 )

[node name="Tombstone2" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( -33, -4211 )
texture = ExtResource( 27 )

[node name="Tombstone3" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 827, -4206 )
texture = ExtResource( 26 )

[node name="Tombstone4" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 439, -4200 )
texture = ExtResource( 26 )

[node name="Player1" parent="YSort" instance=ExtResource( 11 )]
position = Vector2( 3842, -5474 )
scale = Vector2( 1.5, 1.5 )
controls = ExtResource( 2 )
sprite_frames = SubResource( 3 )
data = ExtResource( 3 )

[node name="Player2" parent="YSort" instance=ExtResource( 11 )]
position = Vector2( 4237, -5482 )
scale = Vector2( 1.5, 1.5 )
controls = ExtResource( 4 )
flag = 1
sprite_frames = SubResource( 2 )
data = ExtResource( 5 )

[node name="SkullCage" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 3707, 1238 )

[node name="Grim" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 963, -3611 )

[node name="PlayerCenter" type="Node2D" parent="YSort"]
script = ExtResource( 21 )

[node name="Cthulhu" parent="YSort" instance=ExtResource( 13 )]
position = Vector2( 3865, 351 )
data = ExtResource( 1 )

[node name="Cerberus" parent="YSort" instance=ExtResource( 15 )]
position = Vector2( 4553, -2622 )

[node name="ItemEyes" parent="YSort" instance=ExtResource( 14 )]
position = Vector2( -2140, 855 )

[node name="Background" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 10, 10 )
z_index = -5
offset = Vector2( 100, 0 )

[node name="SecondTimer" type="Timer" parent="."]

[node name="Ghost" type="Node2D" parent="."]
position = Vector2( -2771, 371 )

[node name="Sprite" type="Sprite" parent="Ghost"]
position = Vector2( 2037, 316 )
scale = Vector2( 2.23221, 2.24452 )
z_index = 1
texture = ExtResource( 31 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 30 )
pitch_scale = 0.9
autoplay = true

[node name="Cooler" parent="." instance=ExtResource( 34 )]
position = Vector2( 3545, 419 )

[connection signal="end_phase" from="." to="YSort/Player1" method="_on_Level_end_phase"]
[connection signal="end_phase" from="." to="YSort/Player2" method="_on_Level_end_phase"]
[connection signal="timeout" from="SecondTimer" to="." method="_on_SecondTimer_timeout"]
